add link to github under weather forecast

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </div>
     </div>
 </div>
+<p id="author"><a href="https://github.com/romovababka/weather-forecast" target="_blank">Open-source code</a> by Sofia</p>
 <script src="src/index.js"></script>
 </body>
 </html>
