--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather</title>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="src/styles.css" rel="stylesheet">
 </head>
 <body>
@@ -48,6 +48,7 @@
                 </ul>
             </div>
         </div>
+        <div class="weather-six-days"></div>
     </div>
 </div>
 <p id="author"><a href="https://github.com/romovababka/weather-forecast" target="_blank">Open-source code</a> by Sofia</p>
